# beholder

./: .gitignore  CMakeLists.txt  README.md  composer.json  config-example.json  nsfwd.sh  ocr.sh  run.sh  secure.sh  sentry-poster.php  sentry-symbols.sh
database/: schema.sql
include/beholder/: beholder.h  botlist.h  command.h  config.h  database.h  image.h  image_iterator.h  label.h  listeners.h  logger.h  ocr.h  premium_api.h  reactor.h  regex.h  sarcasm.h  sentry.h  tensorflow_api.h  tessd.h  trusted_hosts.h  whitelist.h
include/beholder/botlists/: discordbotlist.h  infinitybots.h  topgg.h
include/beholder/commands/: addblock.h  ignoredchannels.h  info.h  logchannel.h  message.h  patterns.h  ping.h  premium.h  roles.h  scan.h  showtags.h
include/beholder/proc/: cpipe.h  json_frame.h  spawn.h
include/nsfwd/: log_aggregator.h  nsfwd.h  stbi_image.h  tf_buffer.h  tf_graph.h  tf_operation.h  tf_session.h  tf_session_options.h  tf_status.h  tf_tensor.h
include/yeet/: database.h  listeners.h  yeet.h
nsfwd/: log_aggregator.cpp  main.cpp  stbi_image.cpp  supervisor.cpp
src/: botlist.cpp  command.cpp  config.cpp  database.cpp  delete_message.cpp  download.cpp  embed.cpp  image.cpp  image_iterator.cpp  label.cpp  listeners.cpp  logger.cpp  main.cpp  ocr.cpp  premium_api.cpp  regex.cpp  sarcasm.cpp  sentry.cpp  sha256.cpp  tensorflow_api.cpp  threadexit.cpp  wildcard.cpp
src/commands/: addblock.cpp  ignoredchannels.cpp  info.cpp  logchannel.cpp  message.cpp  patterns.cpp  ping.cpp  premium.cpp  roles.cpp  scan.cpp  showtags.cpp
src/proc/: cpipe.cpp  spawn.cpp
tessd/: avif_perceptual_hash.cpp  cli.cpp  gif_perceptual_hash.cpp  main.cpp  mp4_perceptual_hash.cpp  sha256.cpp  webp_perceptual_hash.cpp
tessd/proc/: cpipe.cpp  spawn.cpp
